New employees and profile pic changes

--- a/about-us.html
+++ b/about-us.html
@@ -114,7 +114,7 @@
           Chad has a strong focus on helping children and families to identify therapeutic needs and
           working collaboratively on finding solutions through the use of CBT, mindfulness, and Narrative
           based approaches. He also has a strong interest in the area of trauma, it's subjectivity, and
-          it's effects on development and perception
+          it's effects on development and perception.
         </p><p>
           Chad spends his free time at home attempting to be an amateur landscaper, hiking, watching
           movies, or enjoying live music. He's also a wanna be foodie so he's always looking for unique
@@ -123,6 +123,25 @@
           and enjoys watching and participating in trivia shows. Chad has tried out for both Teen
           Jeopardy and Who Wants to Be A Millionaire. Sadly he didn't make it past the initial round but
           that hasn't stopped him from continuing to try.
+        </p>
+      </section>
+      <section>
+        <h2>Megan Chicchi, Clinician</h2>
+        <img class="headshot" src="images/MeganChicchi.jpg" alt="Picture of Megan Chicchi">
+        <p>
+          Megan Chicchi is an LSW who graduated with honors from Millersville University with a Bachelor
+          of Arts undergraduate degree and MSW for her graduate degree. She has worked with children in
+          school settings helping to navigate the challenges of social groups and learning styles, college
+          students with diverse backgrounds including multi-cultural and LGBTQ+ students, and counseling
+          non-traditional college students facing economic hardships. Megan also has experience working
+          with children and adolescents as they navigate the adoption process. 
+        </p><p>
+          Megan utilizes a person-centered approach when working with individuals, and has an interest in
+          working with children and adolescents to reach their goals by using a strength-based perspective. 
+        </p><p>
+          She has a passion for social justice and continues to pursue training in topics relating to
+          diversity, equity, and inclusion. In her free time, Megan enjoys reading, hiking, yoga, painting
+          and spending time with family. 
         </p>
       </section>
       <section>
@@ -232,6 +251,41 @@
           In her spare time, she enjoys photography, being outside and spending time with family.
         </p>
       </section>
+      <section style="display:none">
+        <h2>Julia "Julie" Hillard, Clinician</h2>
+        <img class="headshot" src="images/JuliaHillardPic.jpg" alt="Picture of Julie Hillard">
+        <p>
+          Julie Hillard graduated from Lebanon Valley College in 2004 with her Bachelor of Arts in
+          Psychology and Sociology. In May 2021 she is scheduled to obtain her Master’s Degree in Social Work
+          from Millersville University and is in the process of obtaining her license in social work.
+        </p>
+        <p>
+          Julie has nearly 20 years of experience in healthcare with backgrounds in skilled nursing settings,
+          hospital, and hospice care. She strongly believes in the unique journey of each individual and
+          approaches care in a non-judgmental manner. She has vast experience in providing culturally
+          competent care to those of different populations to include LGBTQ+ individuals. She is well versed
+          in supporting those experiencing trauma, loss, and grief. Additionally, she is comfortable working
+          with a variety of areas, including but not limited to depression, anxiety, emotional disturbances,
+          relationship/family concerns, and other mental health disorders.
+        </p>
+        <p>
+          Julie enjoys traveling with her spouse all over and coming home to her dog and cat. She is involved
+          with a local nonprofit sports club and enjoys rugby and running.
+        </p>
+      </section>
+      <section style="display:none">
+        <h2>Allie Maceiko, Clinician</h2>
+        <img class="headshot" src="images/AllieMaceikoPic.jpg" alt="Picture of Allie Maceiko">
+        <p>
+          Allie obtained her bachelor’s degree in social work from Millersville University in 2020 where she
+          also obtained her master’s degree in social work in 2021. Allie’s experience is with individuals
+          with intellectual disabilities. Her interests lie in promoting self-care, working with those who
+          have intellectual disabilities and mental health. Allie is active in her community; she is a member
+          of Cumberland County Children and Youth Services Advisory Board. In her free time, Allie enjoys
+          spending time with her family, traveling, and reading. She is working toward her LSCW and hopes
+          to earn her DSW in the future.      
+        </p>
+      </section>      
       <section>
         <h2>Rachel Mailey, Clinician</h2>
         <img class="headshot" src="images/RachelMaileyPic.jpg" alt="Picture of Rachel Mailey">
@@ -292,6 +346,29 @@
           a yearly Ruck March which supports efforts in the fight against suicide. The March raises
           funds for non-profit organizations that serve veterans and to raises awareness regarding the
           prevalence of veteran suicide and mental health issues. 
+        </p>
+      </section>
+      <section>
+        <h2>Angie Smyser, Clinician</h2>
+        <img class="headshot" src="images/notfound.jpg" alt="Picture of Angie Smyser">
+        <p>
+          Angie Smyser is an LSW who received her MSW degree from Temple University in 2004. She is a member of
+          the National Association of Social Workers.
+        </p><p>
+          Angie has experience in a variety of health care settings including nursing homes, home health care,
+          and Hospice care.  She has counseled individuals and family members in navigating an often-complex
+          health care system.  Her background has allowed her to lead support groups and work with those dealing
+          with grief and loss issues.  She also has experience with children and families, working as a mobile
+          therapist and a family-based clinician.  
+        </p><p>
+          Angie has an interest in providing services to individuals and families of all age ranges.  She is
+          comfortable treating the following (but not limited to): anxiety, depression, self-esteem issues, grief
+          and loss, PTSD, life transitions, and family difficulties, and women’s issues.  She provides a holistic
+          and non-judgmental approach, understanding that each person is on their own unique journey.
+        </p><p>
+          In her spare time, Angie enjoys spending time with her husband and cats.  She is a scrapbooker and
+          attends scrapbooking events with her mother throughout the year.  She and her husband also like to
+          attend the Carlisle car show several times per year.    
         </p>
       </section>
     </div>
