--- a/teletherapy.html
+++ b/teletherapy.html
@@ -119,12 +119,14 @@
           <a class="box" data-toggle="modal" data-target="#modalConsent" href="https://doxy.me/nicolebennerrd" title="Virtual therapy link for Nicole Benner"><img alt="doxy" src="images/doxy.png"/>Nicole Benner</a>
           <a class="box" data-toggle="modal" data-target="#modalConsent" href="https://doxy.me/chadbriggsncs" title="Virtual therapy link for Chad Briggs"><img alt="doxy" src="images/doxy.png"/>Chad Briggs</a>
           <a class="box" data-toggle="modal" data-target="#modalConsent" href="https://doxy.me/meganclinencs" title="Virtual therapy link for Megan Cline"><img alt="doxy" src="images/doxy.png"/>Megan Cline</a>
+          <a class="box" data-toggle="modal" data-target="#modalConsent" href="https://doxy.me/northeasterncounseling" title="Virtual therapy link for Megan Chicchi"><img alt="doxy" src="images/doxy.png"/>Megan Chicchi</a>
           <a class="box" data-toggle="modal" data-target="#modalConsent" href="https://doxy.me/jcorbinvirtualoffice" title="Virtual therapy link for James Corbin"><img alt="doxy" src="images/doxy.png"/>James Corbin</a>
           <a class="box" data-toggle="modal" data-target="#modalConsent" href="https://doxy.me/ncs" title="Virtual therapy link for Katie Green"><img alt="doxy" src="images/doxy.png"/>Katie Green</a>
           <a class="box" data-toggle="modal" data-target="#modalConsent" href="https://doxy.me/denisehaasncs" title="Virtual therapy link for Denise Haas"><img alt="doxy" src="images/doxy.png"/>Denise Haas</a>
           <a class="box" data-toggle="modal" data-target="#modalConsent" href="https://doxy.me/rachelmailey" title="Virtual therapy link for Rachel Mailey"><img alt="doxy" src="images/doxy.png"/>Rachel Mailey</a>
+          <a class="box" data-toggle="modal" data-target="#modalConsent" href="https://doxy.me/northeastern" title="Virtual therapy link for Chelsea Ranney"><img alt="doxy" src="images/doxy.png"/>Chelsea Ranney</a>
           <a class="box" data-toggle="modal" data-target="#modalConsent" href="https://doxy.me/selenescavittoncs" title="Virtual therapy link for Selene Scavitto"><img alt="doxy" src="images/doxy.png"/>Selene Scavitto</a>
-          <a class="box" data-toggle="modal" data-target="#modalConsent" href="https://doxy.me/northeastern" title="Virtual therapy link for Chelsea Senic"><img alt="doxy" src="images/doxy.png"/>Chelsea Senic</a>
+          <a class="box" data-toggle="modal" data-target="#modalConsent" href="https://doxy.me/northeasterncounselingllc" title="Virtual therapy link for Angie Smyser"><img alt="doxy" src="images/doxy.png"/>Angie Smyser</a>
           <a class="box" data-toggle="modal" data-target="#modalConsent" href="https://doxy.me/northeasterncounselingservices" title="Virtual therapy link for Nicole Woods"><img alt="doxy" src="images/doxy.png"/>Nicole Woods</a>
         </div>
       </section>
