updated profile pic

--- a/about-us.html
+++ b/about-us.html
@@ -350,7 +350,7 @@
       </section>
       <section>
         <h2>Angie Smyser, Clinician</h2>
-        <img class="headshot" src="images/notfound.jpg" alt="Picture of Angie Smyser">
+        <img class="headshot" src="images/AngieSmyser.jpg" alt="Picture of Angie Smyser">
         <p>
           Angie Smyser is an LSW who received her MSW degree from Temple University in 2004. She is a member of
           the National Association of Social Workers.
