--- a/about-us.html
+++ b/about-us.html
@@ -290,27 +290,38 @@
         <h2>Rachel Mailey, Clinician</h2>
         <img class="headshot" src="images/RachelMaileyPic.jpg" alt="Picture of Rachel Mailey">
         <p>
-          Rachel Mailey graduated with her Master of Science (MS) in Counseling from Shippensburg 
-          University in 1998. She became a Licensed Professional Counselor in 2002, and has worked in a
-          variety of Mental Health settings over the past several years including small group counseling
-          practices, Community Mental Health agencies, and family and children's services. She has worked
-          as a bereavement counselor at a local Hospice and in the schools as a school-based counselor as
-          well.
+          Rachel Mailey graduated with her Master of Science (MS) in Counseling from
+          Shippensburg University in 1998, and became a Licensed Professional
+          Counselor (LPC) in 2002. Rachel is a Nationally Certified Counselor (NCC) with
+          the National Board for Certified Counselors (NBCC). She is a member of the
+          American Counseling Association (ACA) and Chi Sigma Iota (CSI). She has
+          worked in a variety of mental health settings including small group counseling
+          practices, community mental health agencies, and family and children's services.
+          She has worked as a bereavement counselor at a local Hospice and in the
+          schools as a school-based counselor.
         </p><p>
-          Rachel has a strong interest in working with postpartum women, particularly those suffering with
-          Postpartum Depression, as well as a general interest in Grief and Loss work, including perinatal
-          loss. Rachel works with all age groups and most issues such as anxiety, depression, life
-          transitions, and marital issues. She provides Individual and Couples Counseling, and believes in
-          parental involvement in the therapeutic process when working with children. Rachel believes in
-          the power that each person has to make positive changes for themselves in their lives, and
-          recognizes that sometimes seeking professional guidance and support in an objective and non-
-          judgmental setting is necessary to promote growth. She recognizes that allowing oneself to be
-          vulnerable in a counseling setting is not an easy process but that the rewards can be tremendous.
-        </p><p>      
-          Rachel's pride and joy (and toughest job on the planet!) is raising her five children, with the
-          help of her husband. She is an active member of her local public school board and can be found
-          volunteering in the schools for a variety of activities. She loves to garden and read, and is
-          found most evenings running to, and attending, her children's sports, music and theater events.      
+          Rachel currently works with clients from adolescence through adulthood. Areas
+          of interest and expertise include depression, anxiety, grief and loss, PTSD,
+          post-partum depression/anxiety, marital conflict, and life transitions. She also has
+          a special interest in working with people of all ages who are struggling
+          with/recovering from eating disorders.
+        </p><p>
+          Rachel provides individual, family and couples counseling in a very accepting
+          and empowering environment. She invites parental involvement in the
+          therapeutic process when working with adolescents when appropriate. Rachel
+          believes in the power that each person has to make positive changes for
+          themselves in their lives, and recognizes that sometimes seeking professional
+          guidance and support in an objective and non- judgmental setting is necessary to
+          promote growth. She recognizes that allowing oneself to be vulnerable in a
+          counseling setting is not an easy process but that the rewards can be
+          tremendous. She looks forward to walking the journey with you!    
+        </p><p>
+          Rachel's pride and joy (and toughest job on the planet!) is raising her five
+          children, with the help of her husband. She was an active member of her local
+          public school board for several years and can often be found volunteering in the
+          schools for a variety of activities. She loves to garden and read, and is found
+          most evenings running to, and attending, her children's sports, music and theater
+          events           
         </p>
       </section>
       <section>
