--- a/about-us.html
+++ b/about-us.html
@@ -371,6 +371,24 @@
           attend the Carlisle car show several times per year.    
         </p>
       </section>
+      <section>
+        <h2>Kirstie Ward, Clinician</h2>
+        <img class="headshot" src="images/KirstieWard.jpg" alt="Picture of Kirstie Ward">
+        <p>
+          Kirstie is a Licensed Social Worker who graduated from Penn State University with a Bachelor of Science
+          in Psychology and later graduated from Marywood University with her Master's of Social Work. 
+        </p><p>
+          Kirstie has experience working with children and adults of all ages and has provided services to
+          individuals and families. She has experience working in the inpatient hospital setting, school-based
+          settings, and the outpatient clinical setting. Kirstie has an interest in providing support to individuals
+          and families with concerns related to anxiety, depression, LGBTQ+ related stressors, ADHD, and behavioral
+          concerns. Additionally, she has extensive experience working with autism spectrum disorder.   
+        </p><p>
+          Kirstie enjoys being outdoors, listening to music, crafting, and spending time with her husband and their two
+          pets. She also volunteers for a youth mentoring program and loves getting to spend time with her "little
+          sister".
+        </p>
+      </section>      
     </div>
   </main>
   <footer class="footer bg-light">
