--- a/contact-us.html
+++ b/contact-us.html
@@ -9,7 +9,7 @@
   <!-- Latest compiled and minified CSS -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
   <link rel="stylesheet" href="css/default.css"/>
-  <title>Northeastern Counseling Services | Mechanicsburg, PA | Camp Hill, PA</title>
+  <title>Northeastern Counseling Services | Mechanicsburg, PA</title>
 </head>
 <body>
   <header>
@@ -49,7 +49,7 @@
     <div class="container">
       <div class="row">
         <div class="col-md-6">
-          <h2>Mechanicsburg Office Address</h2>
+          <h2>Trindle Office Address</h2>
           <p>
             5021 East Trindle Rd
           <br>
@@ -69,13 +69,13 @@
       </div>
       <div class="row">
         <div class="col-md-6">
-          <h2>Camp Hill Office Address</h2>
+          <h2>Lenker Office Address</h2>
           <p>
-            3705 Trindle Rd
+            5000 Lenker St
           <br>
-            Suite 140
+            Suite 100
           <br>
-            Camp Hill, PA 17011
+            Mechanicsburg, PA 17050
           </p><p>
             Voice: <a href="tel:717-406-5190​" title="Voice phone">717-406-5190​</a>
           </p><p>
@@ -85,8 +85,8 @@
           </p>
         </div>
         <div class="col-md-6">
-          <iframe width="360" height="310" frameborder="0" title="Camp Hill office location map"
-          src="https://www.bing.com/maps/embed?h=310&w=360&cp=40.234584~-76.944443&lvl=12&typ=d&sty=r&src=SHELL&FORM=MBEDJS&pp=3705%20Trindle%20Rd%20Suite%20140%20Camp%20Hill%2C%20PA%17011~~40.234584~-76.944443" scrolling="no"></iframe>
+          <iframe width="360" height="310" frameborder="0" title="Mechanicsburg office location map"
+          src="https://www.bing.com/maps/embed?h=310&w=360&cp=40.239195~-76.974140&lvl=12&typ=d&sty=r&src=SHELL&FORM=MBEDJS&pp=5000%20Lenker%20St%20Suite%20100%20Mechanicsburg%2C%20PA%17050~~40.239195~-76.974140" scrolling="no"></iframe>
         </div>
       </div>
   </main>
@@ -94,7 +94,7 @@
     <div class="container wrap text-center">
       <p class="text-muted-custom">
         5021&nbsp;East&nbsp;Trindle&nbsp;Road,&nbsp;Mechanicsburg,&nbsp;PA&nbsp;17050 |
-        3705&nbsp;Trindle&nbsp;Rd,&nbsp;Suite&nbsp;140,&nbsp;Camp&nbsp;Hill,&nbsp;PA&nbsp;17011
+        5000&nbsp;Lenker&nbsp;Street,&nbsp;Mechanicsburg,&nbsp;PA&nbsp;17050
       </p>
     </div>
   </footer>
