--- a/about-us.html
+++ b/about-us.html
@@ -10,7 +10,7 @@
    <!-- Latest compiled and minified CSS -->
    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
    <link rel="stylesheet" href="css/default.css"/>
-  <title>Northeastern Counseling Services | Mechanicsburg, PA | Camp Hill, PA</title>
+  <title>Northeastern Counseling Services | Mechanicsburg, PA</title>
 </head>
 <body>
   <header>
@@ -406,7 +406,7 @@
     <div class="container wrap text-center">
       <p class="text-muted-custom">
         5021&nbsp;East&nbsp;Trindle&nbsp;Road,&nbsp;Mechanicsburg,&nbsp;PA&nbsp;17050 |
-        3705&nbsp;Trindle&nbsp;Rd,&nbsp;Suite&nbsp;140,&nbsp;Camp&nbsp;Hill,&nbsp;PA&nbsp;17011
+        5000&nbsp;Lenker&nbsp;Street,&nbsp;Mechanicsburg,&nbsp;PA&nbsp;17050
       </p>
     </div>
   </footer>
