--- a/about-us.html
+++ b/about-us.html
@@ -251,7 +251,7 @@
           In her spare time, she enjoys photography, being outside and spending time with family.
         </p>
       </section>
-      <section style="display:none">
+      <section>
         <h2>Julia "Julie" Hillard, Clinician</h2>
         <img class="headshot" src="images/JuliaHillardPic.jpg" alt="Picture of Julie Hillard">
         <p>
@@ -273,7 +273,7 @@
           with a local nonprofit sports club and enjoys rugby and running.
         </p>
       </section>
-      <section style="display:none">
+      <section>
         <h2>Allie Maceiko, Clinician</h2>
         <img class="headshot" src="images/AllieMaceikoPic.jpg" alt="Picture of Allie Maceiko">
         <p>
