--- a/teletherapy.html
+++ b/teletherapy.html
@@ -123,6 +123,7 @@
           <a class="box" data-toggle="modal" data-target="#modalConsent" href="https://doxy.me/jcorbinvirtualoffice" title="Virtual therapy link for James Corbin"><img alt="doxy" src="images/doxy.png"/>James Corbin</a>
           <a class="box" data-toggle="modal" data-target="#modalConsent" href="https://doxy.me/ncs" title="Virtual therapy link for Katie Green"><img alt="doxy" src="images/doxy.png"/>Katie Green</a>
           <a class="box" data-toggle="modal" data-target="#modalConsent" href="https://doxy.me/denisehaasncs" title="Virtual therapy link for Denise Haas"><img alt="doxy" src="images/doxy.png"/>Denise Haas</a>
+          <a class="box" data-toggle="modal" data-target="#modalConsent" href="https://doxy.me/juliehillardncs" title="Virtual therapy link for Julie Hillard"><img alt="doxy" src="images/doxy.png"/>Julie Hillard</a>
           <a class="box" data-toggle="modal" data-target="#modalConsent" href="https://doxy.me/rachelmailey" title="Virtual therapy link for Rachel Mailey"><img alt="doxy" src="images/doxy.png"/>Rachel Mailey</a>
           <a class="box" data-toggle="modal" data-target="#modalConsent" href="https://doxy.me/northeastern" title="Virtual therapy link for Chelsea Ranney"><img alt="doxy" src="images/doxy.png"/>Chelsea Ranney</a>
           <a class="box" data-toggle="modal" data-target="#modalConsent" href="https://doxy.me/selenescavittoncs" title="Virtual therapy link for Selene Scavitto"><img alt="doxy" src="images/doxy.png"/>Selene Scavitto</a>
