staff promotion and change

--- a/about-us.html
+++ b/about-us.html
@@ -274,19 +274,6 @@
         </p>
       </section>
       <section>
-        <h2>Allie Maceiko, Clinician</h2>
-        <img class="headshot" src="images/AllieMaceikoPic.jpg" alt="Picture of Allie Maceiko">
-        <p>
-          Allie obtained her bachelor’s degree in social work from Millersville University in 2020 where she
-          also obtained her master’s degree in social work in 2021. Allie’s experience is with individuals
-          with intellectual disabilities. Her interests lie in promoting self-care, working with those who
-          have intellectual disabilities and mental health. Allie is active in her community; she is a member
-          of Cumberland County Children and Youth Services Advisory Board. In her free time, Allie enjoys
-          spending time with her family, traveling, and reading. She is working toward her LSCW and hopes
-          to earn her DSW in the future.      
-        </p>
-      </section>      
-      <section>
         <h2>Rachel Mailey, Clinician</h2>
         <img class="headshot" src="images/RachelMaileyPic.jpg" alt="Picture of Rachel Mailey">
         <p>
@@ -328,7 +315,7 @@
         <h2>Chelsea Ranney, Clinician</h2>
         <img class="headshot" src="images/ChelseaRanney.jpg" alt="Picture of Chelsea Ranney">
         <p>
-          Chelsea is a Licensed Social Worker who received her BS in Communications and Master's of Social
+          Chelsea is a Licensed Clinical Social Worker who received her BS in Communications and Master's of Social
           Work from Millersville University. 
         </p><p>
           Chelsea has been in the Human Services field for approximately ten years. She has experience in a
