--- a/about-us.html
+++ b/about-us.html
@@ -255,9 +255,9 @@
         <h2>Julia "Julie" Hillard, Clinician</h2>
         <img class="headshot" src="images/JuliaHillardPic.jpg" alt="Picture of Julie Hillard">
         <p>
-          Julie Hillard graduated from Lebanon Valley College in 2004 with her Bachelor of Arts in
-          Psychology and Sociology. In May 2021 she is scheduled to obtain her Master’s Degree in Social Work
-          from Millersville University and is in the process of obtaining her license in social work.
+          Julie Hillard is a licensed Social Worker who graduated from Lebanon Valley College with her
+          Bachelor of Arts in Psychology and Sociology, and obtained her Master’s Degree in Social Work from
+          Millersville University.
         </p>
         <p>
           Julie has nearly 20 years of experience in healthcare with backgrounds in skilled nursing settings,
