--- a/about-us.html
+++ b/about-us.html
@@ -63,7 +63,9 @@
           disorders. Nicole is also a
           <a href="http://www.iaedp.com/overview%204%20Certification%20Overview.htm" title="CEDP">Certified
           Eating Disorder Specialist</a> (CEDS), as well as a Certified Clinical Supervisor who provide​s
-          supervision for other clinicians seeking advanced clinical licensure.​
+          supervision for other clinicians seeking advanced clinical licensure.​ In addition to her own
+          development, she also teaches the course, <i>Clinical Counseling Skills and Critical
+          Multiculturalism</i> as an adjunct professor at Elizabethtown College.
         </p><p>
           In her spare time, she enjoys reading, crafting, volleyball, coaching 
           <a href="https://www.girlsontherun.org/" title="Girls on the Run">Girls on the Run</a> and spending
