--- a/about-us.html
+++ b/about-us.html
@@ -259,7 +259,7 @@
         <p>
           Julie Hillard is a licensed Social Worker who graduated from Lebanon Valley College with her
           Bachelor of Arts in Psychology and Sociology, and obtained her Master’s Degree in Social Work from
-          Millersville University.
+          Millersville University. Julie is a Certified Grief Counseling Specialist (CGCS).
         </p>
         <p>
           Julie has nearly 20 years of experience in healthcare with backgrounds in skilled nursing settings,
