--- a/about-us.html
+++ b/about-us.html
@@ -339,8 +339,8 @@
           Kirstie has experience working with children and adults of all ages and has provided services to
           individuals and families. She has experience working in the inpatient hospital setting, school-based
           settings, and the outpatient clinical setting. Kirstie has an interest in providing support to individuals
-          and families with concerns related to anxiety, depression, LGBTQ+ related stressors, ADHD, and behavioral
-          concerns. Additionally, she has extensive experience working with autism spectrum disorder.   
+          and families with concerns related to anxiety, depression, LGBTQ+ related stressors, ADHD, eating disorders 
+          and behavioral concerns. Additionally, she has extensive experience working with autism spectrum disorder.   
         </p><p>
           Kirstie enjoys being outdoors, listening to music, crafting, and spending time with her husband and their two
           pets. She also volunteers for a youth mentoring program and loves getting to spend time with her "little
