add new employee

--- a/about-us.html
+++ b/about-us.html
@@ -37,7 +37,7 @@
     <div class="container">
       <h1>About Us</h1>
       <section>
-        <h2>Nicole Woods, Director</h2>
+        <h2>Nicole Woods, Director</h2> <h3><i>(Trindle Road Office and Virtual Office)</i></h3>
         <img class="headshot" src="images/woods_square_2015.jpg" alt="Picture of Nicole Woods">
         <p>
           Nicole's educational background includes graduating with honors from both Towson University 
@@ -76,7 +76,7 @@
         </p>
       </section>
       <section>
-        <h2>Nicole Benner, Registered Dietitian</h2>
+        <h2>Nicole Benner, Registered Dietitian</h2> <h3><i>(Trindle Road Office and Virtual Office)</i></h3>
         <img class="headshot" src="images/NicoleBennerpic1.jpeg" alt="Picture of Nicole Benner">
         <p>
           Nicole is a Registered Dietitian who is passionate ​about helping her clients find peace with 
@@ -102,7 +102,7 @@
         </p>
       </section>
       <section>
-        <h2>Chad Briggs, Clinician</h2>
+        <h2>Chad Briggs, Clinician</h2> <h3><i>(Trindle Road Office and Virtual Office)</i></h3>
         <img class="headshot" src="images/ChadBriggsPic.jpg" alt="Picture of Chad Briggs">
         <p>
           Chad Briggs is a first generation college graduate from a small agricultural community in the
@@ -128,7 +128,7 @@
         </p>
       </section>
       <section>
-        <h2>Megan Cline, Clinician</h2>
+        <h2>Megan Cline, Clinician</h2> <h3><i>(Trindle Road Office and Virtual Office)</i></h3>
         <img class="headshot" src="images/MeganCline.jpg" alt="Picture of Megan Cline">
         <p>
           Megan graduated with honors from York College of Pennsylvania, where she obtained her Bachelor's
@@ -139,7 +139,7 @@
           outpatient mental health facilities, mental health private practice, and higher education.
         </p><p>
           Megan is familiar and comfortable working with a variety of issues, including but not limited to,
-          Eating Disorders, LGBTQIAA-related issues, anxiety, grief and loss, self-harm/suicidality,
+          eating disorders, LGBTQIAA-related issues, anxiety, grief and loss, self-harm/suicidality,
           emotional disturbances, relationship/family concerns, depression, and other mental health
           disorders.  With a non-judgmental approach, she empowers clients to make positive and healthy
           choices when met with difficult life situations.
@@ -157,7 +157,7 @@
         </p>
       </section>
       <section>
-        <h2>James Corbin, Clinician</h2>
+        <h2>James Corbin, Clinician</h2> <h3><i>(Virtual Office)</i></h3>
         <img class="headshot" src="images/Jamescorbinpic1.JPG" alt="Picture of James Corbin">
         <p>
           James R. Corbin is an LCSW with over 20 years of experience working in Pennsylvania. James
@@ -183,7 +183,7 @@
         </p>
       </section>        
       <section>
-        <h2>Katie Green, Clinician</h2>
+        <h2>Katie Green, Clinician</h2> <h3><i>(Lenker Street Office and Virtual Office)</i></h3>
         <img class="headshot" src="images/KatieGreen.jpg" alt="Picture of Katie Green">
         <p>
           Kathleen (Katie) Green graduated from Shippensburg University in 2010 with her Bachelor of
@@ -191,25 +191,25 @@
           became a licensed social worker in February of 2019. 
         </p><p>
           Katie has clinical experience treating individuals, couples, families, and groups in multiple
-          behavioral health care settings over the past 10 years. She has had experience in such settings
+          behavioral health care settings for over a decade. She has had experience in such settings
           as an inpatient psychiatric hospital, home care settings, and in the school setting. Her
           experience in the inpatient psychiatric hospital has helped her develop an understanding and
           sensitivity to the needs of vulnerable populations and is trained in cultural competency
           awareness. She is sensitive of and affirming of individuals experiencing (LGBTQ+) gender
           identity issues. Katie takes a holistic approach, viewing the client as the center of treatment
-          and recognizes that each individual’s journey is different and unique. Katie has received formal
+          and recognizes that each individual's journey is different and unique. Katie has received formal
           training and has experience in various therapy processes such as Dialectical Behavioral Therapy,
-          Cognitive Behavioral Therapy, Interpersonal Therapy, and Family Therapies. She is able to take a
-          creative approach that endeavors to foster rapport, trust, empathy, and respect within the
-          therapeutic relationship.
+          Cognitive Behavioral Therapy, Interpersonal Therapy, Family Therapies and the treatment of eating
+          disorders. She is able to take a creative approach that endeavors to foster rapport, trust,
+          empathy, and respect within the therapeutic relationship.
         </p><p>      
           In her spare time, Katie enjoys traveling to different states and exploring national parks with
           her family. She enjoys spending time with her dog, taking him for walks, and photography. When she
-          isn’t outside enjoying the fresh air, she can be found watching movies or attending live concerts.     
+          isn't outside enjoying the fresh air, she can be found watching movies or attending live concerts.     
         </p>
       </section>
       <section>
-        <h2>Denise Haas, Clinician</h2>
+        <h2>Denise Haas, Clinician</h2> <h3><i>(Trindle Road Office and Virtual Office)</i></h3>
         <img class="headshot" src="images/DeniseHaasPic.jpg" alt="Picture of Denise Haas">
         <p>
           Denise Haas is a Licensed Clinical Social Worker who received her Masters in Social Work from
@@ -235,7 +235,7 @@
         </p>
       </section>
       <section>
-        <h2>Julia "Julie" Hillard, Clinician</h2>
+        <h2>Julie Hillard, Clinician</h2> <h3><i>(Lenker Street Office and Virtual Office)</i></h3>
         <img class="headshot" src="images/JuliaHillardPic.jpg" alt="Picture of Julie Hillard">
         <p>
           Julie Hillard is a licensed Social Worker who graduated from Lebanon Valley College with her
@@ -257,7 +257,7 @@
         </p>
       </section>
       <section>
-        <h2>Rachel Mailey, Clinician</h2>
+        <h2>Rachel Mailey, Clinician</h2> <h3><i>(Trindle Road Office and Virtual Office)</i></h3>
         <img class="headshot" src="images/RachelMaileyPic.jpg" alt="Picture of Rachel Mailey">
         <p>
           Rachel Mailey graduated with her Master of Science (MS) in Counseling from
@@ -295,7 +295,7 @@
         </p>
       </section>
       <section>
-        <h2>Chelsea Ranney, Clinician</h2>
+        <h2>Chelsea Ranney, Clinician Site Director</h2> <h3><i>(Lenker Street Office and Virtual Office)</i></h3>
         <img class="headshot" src="images/ChelseaRanney.jpg" alt="Picture of Chelsea Ranney">
         <p>
           Chelsea is a Licensed Clinical Social Worker who received her BS in Communications and Master's of Social
@@ -312,7 +312,7 @@
         </p>
       </section>
       <section>
-        <h2>Selene Scavitto, Clinician</h2>
+        <h2>Selene Scavitto, Clinician</h2> <h3><i>(Virtual Office)</i></h3>
         <img class="headshot" src="images/SeleneScavitto.jpg" alt="Picture of Selene Scavito">
         <p>
           Selene graduated from Shippensburg University with her MSW and currently is a LSW. Selene has
@@ -330,7 +330,7 @@
         </p>
       </section>
       <section>
-        <h2>Kirstie Ward, Clinician</h2>
+        <h2>Kirstie Ward, Clinician</h2> <h3><i>(Lenker Street Office and Virtual Office)</i></h3>
         <img class="headshot" src="images/KirstieWard.jpg" alt="Picture of Kirstie Ward">
         <p>
           Kirstie is a Licensed Social Worker who graduated from Penn State University with a Bachelor of Science
@@ -347,6 +347,23 @@
           sister".
         </p>
       </section>      
+      <section>
+        <h2>Paige Williams, Clinician</h2> <h3><i>(Virtual Office)</i></h3>
+        <img class="headshot" src="images/PaigeWilliams.jpg" alt="Picture of Paige Williams">
+        <p>
+          Paige is a Licensed Social Worker who graduated from Shippensburg University with a Bachelor's degree and
+          Master's degree in Social Work. Paige is a current member of the National Association of Social Workers (NASW). 
+        </p><p>
+          Paige has experience providing care in healthcare in such settings as skilled nursing facilities, hospice care,
+          and acute hospital care. Paige has experience supporting individuals and families going through trauma, loss,
+          and grief using a Holistic non-judgmental approach through empowering clients to make positive and healthy
+          choices when met with difficult life situations. Paige is comfortable engaging in collaborative care with
+          clients experiencing a range of conditions, including but not limited to depression, anxiety, self-esteem and
+          body image, relationship/family concerns, and Women's issues. Paige understands that seeking therapy can be a
+          difficult decision, and she is ready to meet clients where they are in their personal healing process. She is
+          committed to helping individuals feel their best at any phase of life.
+        </p>
+      </section> 
     </div>
   </main>
   <footer class="footer bg-light">
