Updates for new employee

--- a/about-us.html
+++ b/about-us.html
@@ -354,14 +354,14 @@
           Paige is a Licensed Social Worker who graduated from Shippensburg University with a Bachelor's degree and
           Master's degree in Social Work. Paige is a current member of the National Association of Social Workers (NASW). 
         </p><p>
-          Paige has experience providing care in healthcare in such settings as skilled nursing facilities, hospice care,
-          and acute hospital care. Paige has experience supporting individuals and families going through trauma, loss,
-          and grief using a Holistic non-judgmental approach through empowering clients to make positive and healthy
-          choices when met with difficult life situations. Paige is comfortable engaging in collaborative care with
-          clients experiencing a range of conditions, including but not limited to depression, anxiety, self-esteem and
-          body image, relationship/family concerns, and Women's issues. Paige understands that seeking therapy can be a
-          difficult decision, and she is ready to meet clients where they are in their personal healing process. She is
-          committed to helping individuals feel their best at any phase of life.
+          Paige has experience providing care to all ages in such settings as skilled nursing facilities, hospice care,
+          and hospital care. Paige has experience supporting individuals and families using a holistic, non-judgmental
+          approach through empowering clients to make positive and healthy choices when met with difficult life
+          situations. Paige is comfortable engaging in collaborative care with clients experiencing a range of conditions,
+          including but not limited to depression, anxiety, self-esteem and body image, relationship/family concerns, and
+          women's issues. Paige understands that seeking therapy can be a difficult decision, and she is ready to meet
+          clients where they are in their personal healing process. She is committed to helping individuals feel their
+          best at any phase of life.
         </p>
       </section> 
     </div>
