--- a/teletherapy.html
+++ b/teletherapy.html
@@ -128,6 +128,7 @@
           <a class="box" data-toggle="modal" data-target="#modalConsent" href="https://doxy.me/northeastern" title="Virtual therapy link for Chelsea Ranney"><img alt="doxy" src="images/doxy.png"/>Chelsea Ranney</a>
           <a class="box" data-toggle="modal" data-target="#modalConsent" href="https://doxy.me/selenescavittoncs" title="Virtual therapy link for Selene Scavitto"><img alt="doxy" src="images/doxy.png"/>Selene Scavitto</a>
           <a class="box" data-toggle="modal" data-target="#modalConsent" href="https://doxy.me/kirstiewardncs" title="Virtual therapy link for Kirstie Ward"><img alt="doxy" src="images/doxy.png"/>Kirstie Ward</a>
+          <a class="box" data-toggle="modal" data-target="#modalConsent" href="https://doxy.me/paigewilliamsncs" title="Virtual therapy link for Paige Williams"><img alt="doxy" src="images/doxy.png"/>Paige Williams</a>
           <a class="box" data-toggle="modal" data-target="#modalConsent" href="https://doxy.me/northeasterncounselingservices" title="Virtual therapy link for Nicole Woods"><img alt="doxy" src="images/doxy.png"/>Nicole Woods</a>
         </div>
       </section>
